# astrostream

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
src/: indi_client.cc  indi_client.hh  no_signal.c  no_signal.h  plugin.cc
